--- a/index.html
+++ b/index.html
@@ -22,6 +22,11 @@
 			<h2>Java Interview Questions</h2>
 			<ol>
 				<li>What is Java?</li>
+				<p>Java is a high-level, object-oriented programming language designed for 
+developing applications that can run on a variety of platforms. It was first 
+released in 1995 by Sun Microsystems (now owned by Oracle Corporation) and 
+has since become one of the most popular programming languages in the world.
+				</p>
 				<li>What is the difference between an abstract class and an interface?</li>
 				<li>What is a constructor?</li>
 				<li>What is the difference between == and equals() in Java?</li>
