--- a/1.html
+++ b/1.html
@@ -5,7 +5,7 @@
     <style>
       /* CSS styles for the code snippet */
       pre {
-        background-color:black;
+        background-color: #ffff;
         padding: 10px;
         font-size: 16px;
         font-family: 'Courier New', Courier, monospace;
