--- a/1.html
+++ b/1.html
@@ -35,5 +35,10 @@
         }
       }
     </pre>
+    <span>
+      <span>
+        <br>
+        
+    <a href="https://www.jdoodle.com/embed/v0/5vEP" rel="nofollow" target="_blank">1.Write a Java Program to Print "Hello World" ?</a>
   </body>
 </html>
