--- a/1.html
+++ b/1.html
@@ -4,12 +4,23 @@
     <title>Sum of Two Digits</title>
     <style>
       /* CSS styles for the code snippet */
-      pre {
+      #pre {
+-webkit-box-shadow: inset -1px 3px 8px 5px #1F87FF, 2px 5px 16px 0px #0B325E, 6px 5px 15px 5px rgba(0,0,0,0); 
+box-shadow: inset -1px 3px 8px 5px #1F87FF, 2px 5px 16px 0px #0B325E, 6px 5px 15px 5px rgba(0,0,0,0);
+background: #1C6EA4;
+         
+        padding: 10px;
+        font-size: 16px;
+        font-family: 'Courier New', Courier, monospace;
+}
+
+      
+/*       pre {
         background-color: #ffff;
         padding: 10px;
         font-size: 16px;
         font-family: 'Courier New', Courier, monospace;
-      }
+      } */
     </style>
     <script>
       // JavaScript code for copying the code snippet to clipboard
